# P08

./: CLAUDE.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.claude/rules/: naming.md
.claude/skills/hough-transform-survey/: SKILL.md  cheatsheet.md  glossary.md  patterns.md
.claude/skills/hough-transform-survey/chapters/: ch01-introduction.md  ch02-early-development.md  ch03-shape-parameterizations.md  ch04-efficient-accumulation.md  ch05-peak-detection.md  ch06-performance-analysis.md  ch07-ht-and-other-transforms.md  ch08-applications.md  ch09-architectures.md  ch10-summary.md
.claude/skills/yuen-ellipse-hough/: SKILL.md  cheatsheet.md  glossary.md  patterns.md
.claude/skills/yuen-ellipse-hough/chapters/: ch01-introduction.md  ch02-general-principles.md  ch03-complexity.md  ch04-experimental-results.md  ch05-discussion.md
ellipse_detector/: __init__.py  cli.py  pipeline.py
ellipse_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ellipse_detector/hough/: __init__.py  accumulator.py  stage1_center.py  stage2_aht.py
ellipse_detector/postprocessing/: __init__.py  ellipse_params.py  peak_detector.py
ellipse_detector/preprocessing/: __init__.py  edge_detector.py  gradient.py
ellipse_detector/visualization/: __init__.py  draw.py
tests/: conftest.py  test_ellipse_params.py  test_pipeline.py  test_stage1.py  test_stage2.py
